# review_observation

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  review_observation_SSOT設計書_20260302.md  review_observation_SSOT設計書_20260302_rev1.md  review_observation_SSOT設計書_20260302_rev2.md  ssot.md  ssot_updated.md
docs/: GBP_reviews_API実装メモ.md  GBPの店舗コード取得方法.md  GBPデータソース.md  Sheets連携.md  Slack通知の設定.md  Slack連携.md  取込完了後のデータチェック.md  店舗マスタ参照.md  既存月次データのインポート.md  疑問点.md
infra/: gbp_oauth.json.example  gcloud_commands.md  gcloud_commnads.md
scripts/: diag_review_observation_cli.sh  fetch_gbp_locations.py  gbp_oauth_cli.py  gbp_request_quota_access.py  gen_020_import_monthly.py  gen_places_provider_map_insert.py  import_gbp_monthly_from_xlsx.py  investigate_today.sh  oauth_capture_code.py  report_scheduler_status.sh  run_daily_summary_manual.sh  sync_gbp_performance_to_bq.py  test_gbp_performance_fetch.py  test_review_summary_from_bq.py  verify_performance_ingest.py
sql/: 001_create_tables.sql  001b_alter_add_store_name.sql  001c_backfill_store_name.sql  001d_reorder_store_name_after_store_code.sql  002_create_views.sql  002b_views_latest_available.sql  020_import_historical_monthly_performance.sql  030_merge_monthly_from_xlsx.sql  040_insert_places_provider_map.sql  050_update_provider_place_id_from_gbp.sql  060_data_check_after_ingest.sql
src/: __init__.py  bq_ops.py  config.py  gbp_oauth.py  gbp_performance.py  gbp_reviews.py  main.py  review_summary.py  sheets_writer.py  slack_notify.py
tests/: test_health.py  test_review_summary.py
(+1 files in other folders)
