[project]
name = "review-observation"
version = "0.1.0"
description = "GBP review/rating observation (BigQuery SSOT)"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["venv", ".git"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
